<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>FTServo_Linux</name>
  <version>1.0.0</version>
  <description>FEETECH servo control library for Linux (SMS/STS series including ST3215)</description>
  <maintainer email="stephencferro@gmail.com">stephen</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
